# DOPP

./: pyproject.toml  requirements.txt
homework/: Exercise1_Tokenization.ipynb  entity_count_en.bash
homework/data/: ent_freqs.txt
homework/ex1/: Exercise1.ipynb  alice_tok_de.txt  complex_entities.bash  complex_entities.sh  complex_entities_old.bash  ent_freqs.txt  find_complex_entities.bash  find_simple_entities.bash  generate_cleaned_tokens.sh  simple_entities.sh  stopwords_de.txt  test.bash  tmp.txt  tmp2.txt
homework/ex1/data/: alice_tok_de_cleaned.txt  alice_tok_de_cleaned_shifted.txt
homework/ex2/: exercise_2.ipynb  exercise_2_1426733.ipynb
