[tool.poetry]
name = "dopp"
version = "0.1.0"
description = "DOPP course WS2021"
authors = ["GenosW <58387550+GenosW@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.18"
bash_kernel = "^0.7.2"
nltk = "^3.6.5"
stanza = "^1.3.0"
black = {extras = ["jupyter"], version = "^21.9b0"}
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
